<resources>
    <string name="app_name">Marmalaed</string>
    <string name="name">Marmalade</string>
    <string name="toolbar_text">Today\'s \nChecklist</string>
    <string name="xml_view">Task name</string>
    <string name="add_info">Extra Info</string>
    <string name="reminder">Reminder:</string>
    <string name="note">Note:</string>
    <string name="submit">Save</string>
    <string name="time">Time:</string>
    <string name="reminder_time">Reminder time:</string>
    <string name="weekly_activity_name">Weekly\nChecklist</string>
    <string name="grattitude_activity_name">Gratitude\nLog</string>
    <string name="date_view">august\n10,\n2019</string>
    <string name="daily_thought">Daily\nThoughts</string>
    <string name="books_read_log">Books to\nread</string>
    <string name="books_read_logs">Books to\nread log</string>
    <string name="spending_log">Spending\nlog</string>
    <string name="MoviesLog">Movies to\nWatch</string>
    <string name="Bucketlog">Bucket\nlist</string>
    <string name="mood_tracker">Mood\ntracker</string>
    <string name="habit_tracker">Habit\ntracker</string>
    <string name="happy_lablebackground">happy</string>


    <string name="facebook_application_id" translatable="false">889396404780923
</string>
    <string name="facebook_login_protocol_scheme" translatable="false">889396404780923
</string>
    <string name="title_activity_mrmalade_navigtion">MrmaladeNavigtion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_marmalade_navigation">MarmaladeNavigation</string>
    <string name="title_activity_marmalade_navigation_bar">MarmaladeNavigationBar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_navigation_draw">NavigationDraw</string>
    <string-array name="reminder_array">
        <item>No</item>
        <item>yes</item>
    </string-array>
    <string-array name="priorty_array">
        <item>Low</item>
        <item>Meduim</item>
        <item>High</item>

    </string-array>
    <string-array name="payment_array">
        <item>Cash</item>
        <item>Credit</item>

    </string-array>


</resources>

