<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
    android:id="@+id/two"
    android:title="@string/weekly_activity_name"/>
    <item
        android:id="@+id/today_t0_gratiude"
        android:title="@string/grattitude_activity_name"/>
    <item
        android:id="@+id/today_t0_daily_thoughts"
        android:title="@string/daily_thought"/>
    <item
        android:id="@+id/today_t0_booksLog"
        android:title="@string/books_read_logs"/>
    <item
        android:id="@+id/today_t0_spendingLog"
        android:title="@string/spending_log"/>
    <item
        android:id="@+id/today_to_movies"
        android:title="@string/MoviesLog"/>
    <item
        android:id="@+id/today_to_bucketLog"
        android:title="@string/Bucketlog"/>
    <item
        android:id="@+id/today_to_mood"
        android:title="@string/mood_tracker"/>
    <item
        android:id="@+id/today_to_habit"
        android:title="@string/habit_tracker"/>

</menu>