<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bucketLog_to_today"
        android:title="@string/toolbar_text"/>
    <item
        android:id="@+id/bucketLog_to_week"
        android:title="@string/weekly_activity_name"/>
    <item
        android:id="@+id/bucketLog_t0_gratiude"
        android:title="@string/grattitude_activity_name"/>
    <item
        android:id="@+id/bucketLog_t0_daily_thoughts"
        android:title="@string/daily_thought"/>
    <item
        android:id="@+id/bucketLog_t0_booksLog"
        android:title="@string/books_read_logs"/>
    <item
        android:id="@+id/bucketLog_t0_spendingLog"
        android:title="@string/spending_log"/>
    <item
        android:id="@+id/bucketLog_to_movies"
        android:title="@string/MoviesLog"/>

</menu>